// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmDialog should render with a large container 1`] = `
<div
  aria-labelledby="tc-dialog-header"
  aria-modal="true"
  bsSize="large"
  className="Modal"
  keyboard={true}
  role="dialog"
  show={true}
>
  <div
    className="Header"
    closeButton={false}
  >
    <div
      className="Title"
      id="tc-dialog-header"
    >
      Hello world
    </div>
  </div>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer"
  >
    <nav
      className="theme-tc-actionbar-container tc-actionbar-container nav"
    >
      <div
        className="theme-navbar-left navbar-left"
      >
        <button
          aria-label="CANCEL"
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            CANCEL
          </span>
        </button>
      </div>
      <div
        className="theme-navbar-center"
      />
      <div
        className="theme-navbar-right navbar-right"
      >
        <button
          aria-label="OK"
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </nav>
  </div>
</div>
`;

exports[`ConfirmDialog should render with a progress bar 1`] = `
<div
  aria-labelledby="tc-dialog-header"
  aria-modal="true"
  bsSize="large"
  className="Modal"
  keyboard={true}
  role="dialog"
  show={true}
>
  <div
    className="Header"
    closeButton={false}
  >
    <div
      className="Title"
      id="tc-dialog-header"
    >
      Hello world
    </div>
  </div>
  <div
    className="theme-progress"
    id={undefined}
  >
    <div
      className="theme-progress-percent"
      style={
        Object {
          "width": "25%",
        }
      }
    />
  </div>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer"
  >
    <nav
      className="theme-tc-actionbar-container tc-actionbar-container nav"
    >
      <div
        className="theme-navbar-left navbar-left"
      >
        <button
          aria-label="CANCEL"
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            CANCEL
          </span>
        </button>
      </div>
      <div
        className="theme-navbar-center"
      />
      <div
        className="theme-navbar-right navbar-right"
      >
        <button
          aria-label="OK"
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </nav>
  </div>
</div>
`;

exports[`ConfirmDialog should render with a small container 1`] = `
<div
  aria-labelledby="tc-dialog-header"
  aria-modal="true"
  bsSize="small"
  className="Modal"
  keyboard={true}
  role="dialog"
  show={true}
>
  <div
    className="Header"
    closeButton={false}
  >
    <div
      className="Title"
      id="tc-dialog-header"
    >
      Hello world
    </div>
  </div>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer"
  >
    <nav
      className="theme-tc-actionbar-container tc-actionbar-container nav"
    >
      <div
        className="theme-navbar-left navbar-left"
      >
        <button
          aria-label="CANCEL"
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            CANCEL
          </span>
        </button>
      </div>
      <div
        className="theme-navbar-center"
      />
      <div
        className="theme-navbar-right navbar-right"
      >
        <button
          aria-label="OK"
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </nav>
  </div>
</div>
`;

exports[`ConfirmDialog should render with additional actions 1`] = `
<div
  aria-labelledby="tc-dialog-header"
  aria-modal="true"
  bsSize={undefined}
  className="Modal"
  keyboard={true}
  role="dialog"
  show={true}
>
  <div
    className="Header"
    closeButton={false}
  >
    <div
      className="Title"
      id="tc-dialog-header"
    >
      Hello world
    </div>
  </div>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer"
  >
    <nav
      className="theme-tc-actionbar-container tc-actionbar-container nav"
    >
      <div
        className="theme-navbar-left navbar-left"
      >
        <button
          aria-label="CANCEL"
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            CANCEL
          </span>
        </button>
      </div>
      <div
        className="theme-navbar-center"
      />
      <div
        className="theme-navbar-right navbar-right"
      >
        <button
          aria-label="Keep on Github"
          className="btn btn-info"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            Keep on Github
          </span>
        </button>
        <button
          aria-label="OK"
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </nav>
  </div>
</div>
`;

exports[`ConfirmDialog should render with defaults values 1`] = `
<div
  aria-labelledby="tc-dialog-header"
  aria-modal="true"
  bsSize={undefined}
  className="Modal"
  keyboard={true}
  role="dialog"
  show={true}
>
  <div
    className="Header"
    closeButton={false}
  >
    <div
      className="Title"
      id="tc-dialog-header"
    >
      Hello world
    </div>
  </div>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer"
  >
    <nav
      className="theme-tc-actionbar-container tc-actionbar-container nav"
    >
      <div
        className="theme-navbar-left navbar-left"
      >
        <button
          aria-label="CANCEL"
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            CANCEL
          </span>
        </button>
      </div>
      <div
        className="theme-navbar-center"
      />
      <div
        className="theme-navbar-right navbar-right"
      >
        <button
          aria-label="OK"
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </nav>
  </div>
</div>
`;

exports[`ConfirmDialog should render without header 1`] = `
<div
  aria-labelledby={null}
  aria-modal="true"
  bsSize={undefined}
  className="Modal"
  keyboard={true}
  role="dialog"
  show={true}
>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer"
  >
    <nav
      className="theme-tc-actionbar-container tc-actionbar-container nav"
    >
      <div
        className="theme-navbar-left navbar-left"
      >
        <button
          aria-label="CANCEL"
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            CANCEL
          </span>
        </button>
      </div>
      <div
        className="theme-navbar-center"
      />
      <div
        className="theme-navbar-right navbar-right"
      >
        <button
          aria-label="OK"
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </nav>
  </div>
</div>
`;
